--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ KoOrderRegister/Technical/icon_creator/input
 KoOrderRegister/Technical/icon_creator/output
 
 KoOrderRegister/Technical/KoOrderRegister.csproj.bak
+KoOrderRegister/KoOrderRegister.csproj.user
