--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ KoOrderRegister/Technical/icon_creator/input
 KoOrderRegister/Technical/icon_creator/output
 
 KoOrderRegister/Technical/KoOrderRegister.csproj.bak
+KORCore/bin
+KORCore/obj
