--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ KoOrderRegister/Technical/icon_creator/output
 KoOrderRegister/Technical/KoOrderRegister.csproj.bak
 KORCore/bin
 KORCore/obj
+KORConnect/bin
+KORConnect/obj
