--- a/KoOrderRegister/Platforms/iOS/Info.plist
+++ b/KoOrderRegister/Platforms/iOS/Info.plist
@@ -29,11 +29,16 @@
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 	
-	<!-- Notification-->
+	<!--Notification-->
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
+	<!--Camera-->
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses camera for...</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to the microphone for record videos</string>
 </dict>
 </plist>
