--- a/KORConnect/KORConnect.csproj
+++ b/KORConnect/KORConnect.csproj
@@ -8,4 +8,8 @@
 	  <ServerGarbageCollection>false</ServerGarbageCollection>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
+  </ItemGroup>
+
 </Project>
