--- a/KORConnect/KORConnect.csproj
+++ b/KORConnect/KORConnect.csproj
@@ -9,7 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.1" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KORCore\KORCore.csproj" />
   </ItemGroup>
 
 </Project>
