85 2 tracking database changes real time (#229)
* #85 add KORCore class libary

* #85 add core models and utility

* #85 add database notify changed

* #85 update ignore

* #84 #85

* #82 #85

* #82 #85 fix DI

* #81 #82 #85

* #81 #82 #85 fix android build error

* #81 #82 #85

* #81 #82  #85 add SignalR

* #81 #82 #85

* #81 #82 #85 Alpha 1

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ KoOrderRegister/Technical/icon_creator/input
 KoOrderRegister/Technical/icon_creator/output
 
 KoOrderRegister/Technical/KoOrderRegister.csproj.bak
+KORCore/bin
+KORCore/obj
+KORConnect/bin
+KORConnect/obj
