--- a/KoOrderRegister/Platforms/Android/AndroidManifest.xml
+++ b/KoOrderRegister/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:supportsRtl="true" android:icon="@mipmap/appicont" android:roundIcon="@mipmap/appicontr" 
+	<application android:allowBackup="true" android:supportsRtl="true" android:usesCleartextTraffic="true" android:icon="@mipmap/appicont" android:roundIcon="@mipmap/appicontr" 
 	android:debuggable="true"			 
 	/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
