--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -82,8 +82,8 @@ jobs:
         
         
   build-apk:
-    #runs-on: [windows-latest]
-    runs-on: [self-hosted, Windows]
+    runs-on: [windows-latest]
+    #runs-on: [self-hosted, Windows]
     needs: prepare-version
     steps:
       - uses: actions/checkout@v2
