--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -28,10 +28,14 @@ jobs:
       versionCode: ${{ steps.version.outputs.versionCode }}
       minorVersion: ${{ steps.version.outputs.minorVersion }}
     steps:
+      - name: Cleanup workspace before checkout
+        run: rm -rf ${{ github.workspace }}/*
+      
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          clean: false
 
       - name: Get the current version using GitHub CLI
         id: get-version
@@ -87,6 +91,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          clean: false
 
       - name: Debug Output Values
         run: |
@@ -118,47 +123,48 @@ jobs:
           name: apk-artifact
           path: output\*.apk
 
-  build-msix:
-    runs-on: [self-hosted, Windows]
-    needs: prepare-version
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+  # build-msix:
+  #   runs-on: [self-hosted, Windows]
+  #   needs: prepare-version
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         clean: false
 
-      - name: Debug Output Values
-        run: |
-          echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
+  #     - name: Debug Output Values
+  #       run: |
+  #         echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.0.x'
+  #     - name: Set up .NET Core
+  #       uses: actions/setup-dotnet@v1
+  #       with:
+  #         dotnet-version: '8.0.x'
 
-      - name: Install Certificate
-        run: |
-          Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
-          -CertStoreLocation Cert:\CurrentUser\My `
-          -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)
-        shell: powershell
+  #     - name: Install Certificate
+  #       run: |
+  #         Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
+  #         -CertStoreLocation Cert:\CurrentUser\My `
+  #         -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)
+  #       shell: powershell
 
-      - name: Run MSIX build script
-        run: cmd /c ".\build_msix.bat"
-        env:
-          KEYPASS: ${{ secrets.KEYPASS }}
-          NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
-          NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
-          BUILD_VERSION: ${{ env.varrible }}
+  #     - name: Run MSIX build script
+  #       run: cmd /c ".\build_msix.bat"
+  #       env:
+  #         KEYPASS: ${{ secrets.KEYPASS }}
+  #         NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
+  #         NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
+  #         BUILD_VERSION: ${{ env.varrible }}
 
-      - name: Upload MSIX
-        uses: actions/upload-artifact@v4
-        with:
-          name: msix-artifact
-          path: output\*.msix
+  #     - name: Upload MSIX
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: msix-artifact
+  #         path: output\*.msix
 
   release:
     runs-on: [self-hosted, Windows]
-    needs: [prepare-version, build-apk, build-msix]
+    needs: [prepare-version, build-apk]
     steps:
       - name: Cleanup workspace
         run: rm -rf ${{ github.workspace }}/*
@@ -166,6 +172,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          clean: false
 
       - name: Download APK Artifact
         uses: actions/download-artifact@v3
@@ -176,19 +183,19 @@ jobs:
         run: |
           mv *.apk output/
 
-      - name: Download MSIX Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: msix-artifact
+      # - name: Download MSIX Artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: msix-artifact
 
-      - name: Move MSIX Artifact
-        run: |
-          mv *.msix output/
+      # - name: Move MSIX Artifact
+      #   run: |
+      #     mv *.msix output/
 
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
         with:
-          files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
+          files: output/*.apk
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
           release_name: ${{ needs.prepare-version.outputs.newVersion }}
           body_path: Technical/release_base.md
