--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -28,61 +28,11 @@ jobs:
       versionCode: ${{ steps.version.outputs.versionCode }}
       minorVersion: ${{ steps.version.outputs.minorVersion }}
     steps:
-      - name: Cleanup workspace before checkout
-        run: rm -rf ${{ github.workspace }}/*
-      
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          clean: false
-
-      - name: Get the current version using GitHub CLI
-        id: get-version
-        run: |
-          VERSION=$(gh api \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
-            --jq '.value')
-          echo "Current version: $VERSION"
-          if [[ -z "$VERSION" ]]; then
-            echo "Error: VERSION is empty"
-            exit 1
-          fi
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
-          echo "MAJOR=$MAJOR" >> $GITHUB_ENV
-          echo "MINOR=$MINOR" >> $GITHUB_ENV
-          echo "PATCH=$PATCH" >> $GITHUB_ENV
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN }}
-
-      - name: Increment the MINOR version
-        id: increment-minor
-        run: |
-          NEW_PATCH=$((PATCH + 1))
-          echo "New MINOR version: $NEW_PATCH"
-          echo "new-minor=$NEW_PATCH" >> $GITHUB_ENV
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN }}
-
-      - name: Update the version using GitHub CLI
-        id: version
-        run: |
-          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
-          echo "Updating version to: $NEW_VERSION"
-          echo "newVersion=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "versionCode=$MAJOR" >> $GITHUB_OUTPUT
-          echo "minorVersion=$MINOR" >> $GITHUB_OUTPUT
-          gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
-            -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN }}
-          NEW_PATCH: ${{ env.new-minor }}
+          clean: true  # Ez biztosítja a workspace tisztaságát
 
   build-apk:
     runs-on: [windows-latest]
@@ -91,7 +41,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          clean: false
+          clean: true
 
       - name: Debug Output Values
         run: |
@@ -123,56 +73,14 @@ jobs:
           name: apk-artifact
           path: output\*.apk
 
-  # build-msix:
-  #   runs-on: [self-hosted, Windows]
-  #   needs: prepare-version
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-  #         clean: false
-
-  #     - name: Debug Output Values
-  #       run: |
-  #         echo "New Version: ${{ needs.prepare-version.outputs.newVersion }}"
-
-  #     - name: Set up .NET Core
-  #       uses: actions/setup-dotnet@v1
-  #       with:
-  #         dotnet-version: '8.0.x'
-
-  #     - name: Install Certificate
-  #       run: |
-  #         Import-PfxCertificate -FilePath "KoOrderRegister\Technical\kor.pfx" `
-  #         -CertStoreLocation Cert:\CurrentUser\My `
-  #         -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)
-  #       shell: powershell
-
-  #     - name: Run MSIX build script
-  #       run: cmd /c ".\build_msix.bat"
-  #       env:
-  #         KEYPASS: ${{ secrets.KEYPASS }}
-  #         NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
-  #         NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
-  #         BUILD_VERSION: ${{ env.varrible }}
-
-  #     - name: Upload MSIX
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: msix-artifact
-  #         path: output\*.msix
-
   release:
     runs-on: [self-hosted, Windows]
     needs: [prepare-version, build-apk]
     steps:
-      - name: Cleanup workspace
-        run: rm -rf ${{ github.workspace }}/*
-
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          clean: false
+          clean: true
 
       - name: Download APK Artifact
         uses: actions/download-artifact@v4
@@ -180,17 +88,7 @@ jobs:
           name: apk-artifact
 
       - name: Move APK Artifact
-        run: |
-          mv *.apk output/
-
-      # - name: Download MSIX Artifact
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: msix-artifact
-
-      # - name: Move MSIX Artifact
-      #   run: |
-      #     mv *.msix output/
+        run: cmd /c "move *.apk output\"
 
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
